--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "homepage": "https://github.com/lynox-org/lynox#readme",
   "dependencies": {
+    "@prisma/client": "^6.11.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "prisma": "^6.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
